# blesd

./: Cargo.toml  LICENSE  README.md
src/: characteristic_uuids.rs  descriptor_uuids.rs  lib.rs  main.rs  manufacturer_ids.rs  service_uuids.rs
